# FactorioPreviewToolkit

./: .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  Factorio Preview Viewer.html  LICENSE  README.md  __main__.py  config.ini  mypy.ini  pyproject.toml
.github/workflows/: build.yml
Factorio Preview Viewer/: config.js  index.html
Factorio Preview Viewer/js/: keyboard.js  mapView.js
docs/: ARCHITECTURE.md
previews/: local_planet_names.js
src/: current-log.txt  previous-log.txt
src/FactorioPreviewToolkit/: __main__.py
src/FactorioPreviewToolkit/controller/: controller.py  map_processing_pipeline.py  single_process_executor.py
src/FactorioPreviewToolkit/factorio_path_provider/: active_window_provider.py  base_active_window_provider.py  factory.py  fixed_path_provider.py  linux_active_window_provider.py  mac_active_window_provider.py  windows_active_window_provider.py
src/FactorioPreviewToolkit/map_string_provider/: clipboard_provider.py  factory.py  file_provider.py
src/FactorioPreviewToolkit/preview_generator/: __main__.py  exchange_string_to_settings.py  factorio_interface.py  preview_generation.py  preview_generation_setup.py  settings_to_map_previews.py
src/FactorioPreviewToolkit/shared/: config.py  config_schema.py  error_popup.py  shared_constants.py  sound.py  structured_logger.py  tee_logger.py  utils.py
src/FactorioPreviewToolkit/uploader/: __main__.py  base_uploader.py  factory.py  local_sync_uploader.py  rclone_uploader.py  skip_uploader.py
src/controller/: controller.py  map_processing_pipeline.py  single_process_executor.py  system_monitor.py
src/factorio_path_provider/: active_window_provider.py  base.py  factory.py  fixed_path_provider.py  windows_active_window_provider.py
src/map_string_provider/: base.py  clipboard_provider.py  factory.py
src/preview_generator/: __main__.py  constants.py  exchange_string_to_settings.py  factorio_interface.py  generate_previews.py  settings_to_map_previews.py
src/shared/: config.py  config_loader.py  config_schema.py  error_popup.py  shared_constants.py  sound.py  structured_logger.py  tee_logger.py  utils.py
src/uploader/: __main__.py  base_uploader.py  constants.py  factory.py  rclone_uploader.py
toolkit_build/: build.py  release.py  version.py
viewer/: index.html  local_viewer_config.js  style.css  viewer_config.js
viewer/js/: keyboard.js  main.js  mapView.js
